refactor: WsCatalogBuilder 코드리뷰 반영 — 예외 컨벤션 정렬 및 envelope reflection 강화
- warnIfTopicPayloadConflict/warnIfQueuePayloadConflict 얇은 래퍼 제거 → warnIfPayloadConflict 직접 호출
- validatePath/validatePayload/validatedTopicPath: IllegalArgumentException → SystemException(WsCatalogErrorCode)
- WsCatalogErrorCode 신규 추가 (ANNOTATION_BLANK_PATH, ANNOTATION_INVALID_PATH_FORMAT, ANNOTATION_VOID_PAYLOAD, ANNOTATION_OBJECT_PAYLOAD, ANNOTATION_BLANK_TOPIC_PATH, INVALID_ENVELOPE_CLASS)
- buildEnvelope: envelopeClass.isRecord() 가드 추가 — 잘못된 설정 시 즉시 실패
- envelope-type(String) → envelope-class(Class<?>): YAML에 FQCN 명시, reflection으로 필드 자동 추출
- WsCatalog.Info / WsCatalogProperties.Info / info YAML 섹션 제거 (소비자 없음)
- 테스트: assertThatThrownBy → assertCoffeeShoutException 전환
- ADR-0011: 변경 사항 반영

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>